kubernetes/apps/3dchi/spoolman/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ${APP}
  name: ${APP}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APP}
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ${APP}
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: ${APP}
          image: ghcr.io/donkie/spoolman:latest
          ports:
            - containerPort: 7912
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /home/app/.local/share/spoolman
              name: spoolman
      restartPolicy: Always
      volumes:
        - name: ${APP}
          persistentVolumeClaim:
            claimName: ${APP}
