kubernetes/apps/3dchi/spoolman/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: ${APP}
  labels:
    app: ${APP}
spec:
  selector:
    app: ${APP}
  ports:
  - port: 7912
    targetPort: http
    name: http
    protocol: TCP
