kubernetes/apps/3dchi/spoolman/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: spoolman-https
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - spoolman.${SECRET_DOMAIN}
  rules:
    - backendRefs:
      - name: spoolman
        port: 7912
